Fixed dropdown styling on safari

--- a/wp-content/themes/airtaxi/scss/main.scss
+++ b/wp-content/themes/airtaxi/scss/main.scss
@@ -5224,13 +5224,12 @@ span.wpcf7-list-item {
             select {
                 border: 3px solid #4ec5cd;
                 border-radius: 2px;
+                -webkit-appearance: none;
+                background: linear-gradient(45deg, transparent 50%, #4ec5cd 50%), linear-gradient(135deg, #4ec5cd 50%, transparent 50%), linear-gradient(to right, transparent , transparent);
+                background-position: calc(100% - 15px) calc(1em + 2px), calc(100% - 10px) calc(1em + 2px), 100% 0;
+                background-size: 5px 5px, 5px 5px, 2.5em 2.5em;
+                background-repeat: no-repeat;
             }
-        }
-        
-        .dataTables_length,
-        .dataTables_filter {
-            float: none;
-            display: inline-block;
         }
         
         .dataTables_filter label {
